e2e-tests/tests/haproxy/01-create-cluster.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - timeout: 30
    script: |-
      set -o errexit
      set -o xtrace

      source ../../functions

      get_cr \
          | yq eval '.spec.updateStrategy="RollingUpdate"' - \
          | yq eval '.spec.mysql.clusterType="async"' - \
          | yq eval '.spec.orchestrator.enabled=true' - \
          | yq eval '.spec.proxy.haproxy.enabled=true' - \
          | yq eval '.spec.proxy.haproxy.size=3' - \
          | yq eval '.spec.proxy.haproxy.livenessProbe.timeoutSeconds=30' - \
          | yq eval '.spec.proxy.haproxy.livenessProbe.periodSeconds=10' - \
          | yq eval '.spec.proxy.haproxy.readinessProbe.failureThreshold=40' - \
          | yq eval '.spec.proxy.haproxy.readinessProbe.successThreshold=10' - \
          | yq eval '.spec.proxy.haproxy.size=3' - \
          | kubectl -n "${NAMESPACE}" apply -f -
