e2e-tests/tests/haproxy/03-read-from-primary.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - timeout: 30
    script: |-
      set -o errexit
      set -o xtrace

      source ../../functions

      data=$(run_mysql "SELECT * FROM myDB.myTable" "-h $(get_haproxy_svc $(get_cluster_name)) -P3306")

      kubectl create configmap -n "${NAMESPACE}" 03-read-from-primary --from-literal=data="${data}"
