e2e-tests/tests/haproxy/06-check-label-haproxy-primary.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
timeout: 120
commands:
  - script: |-
      set -o errexit
      set -o xtrace

      source ../../functions

      primary_pod_from_label="$(get_primary_from_label)"
      primary_pod_from_haproxy="$(get_primary_from_haproxy ${test_name}-haproxy-0)"
      if [ "${primary_pod_from_label}" != "${primary_pod_from_haproxy}" ]; then
          echo "Primary in k8s label (${primary_pod_from_label}) is not set to same pod as in haproxy (${primary_pod_from_haproxy})!"
          exit 1
      fi

      check_haproxy_backends "${test_name}"
