e2e-tests/tests/haproxy/07-check-primary-failover.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |-
      set -o errexit
      set -o xtrace

      source ../../functions

      primary_pod_from_label="$(get_primary_from_label)"

      kubectl -n "${NAMESPACE}" delete pod ${primary_pod_from_label}

      primary_pod_from_label="$(wait_for_haproxy_primary ${test_name})"

      check_haproxy_backends "${test_name}" "${primary_pod_from_label}"
    timeout: 600
