e2e-tests/tests/haproxy/08-disable-haproxy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
timeout: 10
---
apiVersion: ps.percona.com/v1alpha1
kind: PerconaServerMySQL
metadata:
  name: haproxy
spec:
  allowUnsafeConfigurations: true
  proxy:
    haproxy:
      enabled: false
