e2e-tests/tests/haproxy/09-disable-haproxy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
---
apiVersion: ps.percona.com/v1
kind: PerconaServerMySQL
metadata:
  name: haproxy
spec:
  unsafeFlags:
    proxy: true
  proxy:
    haproxy:
      enabled: false
