e2e-tests/tests/haproxy/10-drop-finalizer.yaml
apiVersion: ps.percona.com/v1alpha1
kind: PerconaServerMySQL
metadata:
  name: haproxy
  finalizers: []
