e2e-tests/tests/haproxy/98-drop-finalizer.yaml
apiVersion: ps.percona.com/v1
kind: PerconaServerMySQL
metadata:
  name: haproxy
  finalizers: []
