e2e-tests/tests/haproxy/99-remove-cluster-gracefully.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
  - apiVersion: ps.percona.com/v1
    kind: PerconaServerMySQL
    metadata:
      name: haproxy
commands:
  - timeout: 60
    script: |-
      set -o errexit
      set -o xtrace

      source ../../functions

      destroy_operator
