e2e-tests/tests/haproxy/04-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 30
---
kind: ConfigMap
apiVersion: v1
metadata:
  name: 04-read-from-replicas
data:
  haproxy-haproxy-replicas: "100500"
