e2e-tests/tests/haproxy/08-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 420
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: haproxy-mysql
status:
  observedGeneration: 1
  replicas: 3
  readyReplicas: 3
  currentReplicas: 3
  updatedReplicas: 3
  collisionCount: 0
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: haproxy-orc
status:
  observedGeneration: 1
  replicas: 3
  readyReplicas: 3
  currentReplicas: 3
  updatedReplicas: 3
  collisionCount: 0
---
apiVersion: ps.percona.com/v1alpha1
kind: PerconaServerMySQL
metadata:
  name: haproxy
  finalizers:
    - delete-mysql-pods-in-order
status:
  haproxy: {}
  mysql:
    ready: 3
    size: 3
    state: ready
  orchestrator:
    ready: 3
    size: 3
    state: ready
  router: {}
  state: ready
