e2e-tests/tests/haproxy/09-assert.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: haproxy-mysql
status:
  collisionCount: 0
  currentReplicas: 3
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: haproxy-orc
status:
  collisionCount: 0
  currentReplicas: 3
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
---
apiVersion: ps.percona.com/v1alpha1
kind: PerconaServerMySQL
metadata:
  finalizers:
  - delete-mysql-pods-in-order
  name: haproxy
status:
  haproxy: {}
  mysql:
    ready: 3
    size: 3
    state: ready
  orchestrator:
    ready: 3
    size: 3
    state: ready
  router: {}
  state: ready
