e2e-tests/tests/haproxy/09-errors.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: haproxy-haproxy
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-haproxy
